# cynthium-web

./: .gitattributes  .gitignore  README.md  vercel.json
backend/: .env.example  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: sites.py
backend/app/core/: config.py
backend/app/services/: pathfinding.py  simulation.py  site_rasters.py  sun_position.py
backend/app/templates/: index.html
backend/data/: PSR_mask_COMBINED_GEO.tif.aux.xml  elevation.tif  elevation.tif.aux.xml  illumination.tif  meteor_energy.tif  moon_de440_250416.tf  sites.json  summer-temp.tif  winter-temp.tif
backend/data/sites/amundsen_1/: elevation.npy  elevation_meta.json  illumination.npy  meteor.npy  meteor_meta.json  summer_temp.npy  winter_temp.npy  winter_temp_meta.json
backend/data/sites/amundsen_rim/: elevation.npy  elevation_meta.json  illumination.npy  illumination_meta.json  meteor.npy  summer_temp.npy  winter_temp.npy  winter_temp_meta.json
backend/data/sites/cabeus_exterior_wall_1/: elevation.npy  elevation_meta.json  illumination.npy  meteor.npy  meteor_meta.json  summer_temp.npy  summer_temp_meta.json  winter_temp.npy
backend/data/sites/connecting_ridge/: elevation.npy  elevation_meta.json  illumination.npy  illumination_meta.json  meteor.npy  summer_temp.npy  winter_temp.npy  winter_temp_meta.json
backend/data/sites/de_gerlache_kocher_massif/: meteor.npy  (+7 more)
backend/services/: pathfinding.py  rover_settings.py  simulation.py  site_rasters.py  sun_position.py  theta_star.py
(+194 files in other folders)
