[tool.vercel]
entrypoint = "backend.app.main:app"

[project]
name = "cynthium-server"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "affine>=2.4.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "spiceypy>=8.0.0",
  "pyproj>=3.0.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.2.1",
  "scipy>=1.12.0",
]
